--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    padding: 16px;
+    margin-right: 200px;
 }
 
 h1 {
@@ -10,15 +12,22 @@ h2 {
     font-size: large;
 }
 
-.ingredients {
-    font-style: italic;
+.ingredients, ul {
+    background-color: blanchedalmond;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
-
-.steps {
+.ingredients {
+    padding-bottom: 0px;
+}
+    .steps {
     font-weight: lighter;
 }
-ul {
-    background-color: blanchedalmond;
-}
 
+ol {
+    background-color: aliceblue;
+}
 li {margin: 10px;}
+.list_img {
+    max-width: 100px;
+}
